feat: deliver strict local MVP RAG with file ingest and HF embeddings

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
-﻿# Default mode is fake for fast local demo without model downloads
-RAG_FAKE_MODE=true
-
-# Real model mode (set RAG_FAKE_MODE=false)
+﻿# Hugging Face embeddings + local FAISS
 EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
-LLM_MODEL=google/flan-t5-small
+EMBEDDING_DEVICE=cpu
 
 # Retrieval tuning
 RETRIEVAL_K=3
