--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,8 @@ pydantic-settings==2.10.1
 langchain-core==0.3.75
 langchain-community==0.3.29
 langchain-text-splitters==0.3.11
+langchain-huggingface==0.3.1
+sentence-transformers==5.1.0
+torch==2.8.0
 faiss-cpu==1.12.0
+python-multipart==0.0.20
