feat: raise RAG API quality with validation, threshold retrieval, and smoke tests

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-﻿# Hugging Face embeddings + local FAISS
+# Hugging Face embeddings + local FAISS
 EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 EMBEDDING_DEVICE=cpu
 
 # Retrieval tuning
 RETRIEVAL_K=3
+RETRIEVAL_SCORE_THRESHOLD=0.15
+MAX_TOP_K=10
 CHUNK_SIZE=400
 CHUNK_OVERLAP=60
